# py-auth

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  快速开始.md
.github/workflows/: build-client.yml  ci.yml  docker-server.yml
app/: audit.py  auth.py  coerce.py  database.py  deps.py  middleware.py  models.py  schemas.py  ws_manager.py
app/routers/: admin.py  auth.py  user.py  ws.py
client/: BUILD.md  README.md  STORAGE.md
client/go/: README.md  authclient.go  cache.go  client.go  crypto.go  device_notwindows.go  device_utils.go  device_windows.go  disk.go  disk_nounix.go  disk_windows.go  go.mod  go.sum  network.go  sdk_meta.go  state_bundle.go  storage.go
client/go/examples/: main.go
client/python/: README.md  example.py  example_background.py  pyproject.toml
client/python/py_auth_client/: __init__.py  auth_client.py  device_utils.py  state_bundle.py
client/python/py_auth_client/device_platform/: __init__.py  fallback.py  posix.py  windows.py
client/ts/: .npmignore  README.md  example.ts  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.example.json  tsconfig.json
client/ts/src/: cache.ts  client.ts  crypto.ts  device.ts  devicePlatform.ts  devicePlatformFallback.ts  devicePlatformPosix.ts  devicePlatformShared.ts  devicePlatformWindows.ts  errors.ts  http.ts  index.ts  sdkMeta.ts  stateBundle.ts  storage.ts  types.ts
docs/dev/: client-python-release.md  client-storage.md  client-ts-build.md
scripts/: check-code-quality.sh
tests/: conftest.py  test_health.py
tools/: decrypt_state_bundle.py
web/: package.json  pnpm-lock.yaml  vite.config.js
web/src/: App.vue  main.js  router.js
web/src/api/: index.js
web/src/assets/: common.css  style.css  variables.css
web/src/components/: AdminPanel.vue  ConfigPanel.vue  LoginForm.vue
web/src/docs/: usage.md
web/src/utils/: errorFeedback.js
web/src/views/: AdminLayout.vue  AuditLogs.vue  Docs.vue  Settings.vue  Users.vue
